Fixes last banner alignment again.

--- a/less/index.less
+++ b/less/index.less
@@ -260,7 +260,7 @@ h2 { font-size: 30px; }
 
 #s10 {
   height: 80vh;
-  margin: 90px 0;
+  margin: 60px 0;
 
   .background {
     .paper-shadow.z-1();
